--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -105,6 +105,7 @@
                   type="date"
                   id="birthdate"
                   name="birthdate"
+                  max="2009-06-15"
                   required
                 /><br>
               </div>
@@ -122,7 +123,7 @@
                   id="location1"
                   name="location"
                   value="New York"
-                  
+                  checked
                 />
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
