modification du setAttribute sur function countCheckbox et retrait de la boucle

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -57,12 +57,10 @@
 							<div class="formData">
 								<label for="email">E-mail</label>
 								<input class="text-control" type="email" id="email" name="email" required/>
-								<br>
 							</div>
 							<div class="formData">
 								<label for="birthdate">Date de naissance</label>
 								<input class="text-control" type="date" id="birthdate" name="birthdate" max="2009-06-15" required/>
-								<br>
 							</div>
 							<div class="formData">
 								<label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label>
@@ -71,7 +69,7 @@
 							<p class="text-label">
 								Quelles villes ?
 							</p>
-							<div class="formData formDataCheckbox">
+							<div class="formData">
 								<input class="checkbox-input city" type="checkbox"id="location1" name="location" value="New York"checked/>
 								<label class="checkbox-label" for="location1"><span class="checkbox-icon"></span>New York</label>
 								<input class="checkbox-input city" type="checkbox"id="location2" name="location" value="San Francisco"/>
@@ -88,10 +86,8 @@
 							<div class="formData">
 								<input class="checkbox-input" type="checkbox" id="checkbox1" required/>
 								<label class="checkbox2-label" for="checkbox1"><span class="checkbox-icon"></span>J'ai lu et accepté les conditions d'utilisation.</label>
-								<br>
 								<input class="checkbox-input" type="checkbox" id="checkbox2"/>
 								<label class="checkbox2-label" for="checkbox2"><span class="checkbox-icon"></span>Je souhaite être prévenu des prochains évènements.</label>
-								<br>
 							</div>
 							<input id="submit" class="btn-submit button" type="submit" value="C'est parti"/>
 						</form>
